Style: fix left/right alignment variables

--- a/packages/stockflux-launcher/src/App.css
+++ b/packages/stockflux-launcher/src/App.css
@@ -56,8 +56,9 @@ html {
 }
 
 .shortcut-vertical {
-  padding-left: 10px;
-  padding-top: 60px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 52px;
 }
 
 .left,
